# gitlab-rescue

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: main.yaml  pr.yaml
doc/: README.html
src/: api_client.rs  app_error.rs  app_std.rs  clap_app.rs  command.rs  dotenv.rs  gen.rs  get_variable.rs  gitlab.rs  gitlab_api.rs  gitlab_instance.rs  io.rs  lib.rs  macros.rs  shell_types.rs
tests/: integration_tests.rs
tests/resources/: dotenv_fish_with_All_env.txt  dotenv_fish_with_dev_env.txt  dotenv_fish_with_prod_env.txt  dotenv_fish_with_qa_env.txt  dotenv_posix_with_All_env.txt  dotenv_posix_with_dev_env.txt  dotenv_posix_with_prod_env.txt  dotenv_posix_with_qa_env.txt  response_list_variables.json  response_show_env_file_envAll.json  response_show_env_file_envB.json  response_show_env_var_envAll.json  response_show_env_var_envB.json
